2020-11-28  Allen D. Ball  <ball@hcf.dev>

	* Configure META-INF/services/jdk.javadoc.doclet.Taglet.

	* src/main/java/ball/tools/javadoc/AbstractTaglet.java;
	Interim check-in: Use Extern to construct external javadoc links
	(currently fails due to ClassLoader issues).

	* src/main/java/ball/tools/javadoc/Extern.java: Initial writing.

	* src/main/java/ball/tools/javadoc/StandardDoclet.java:
	Interim check-in: Configure Extern by intercepting "-link" and
	"-linkoffline" Option.process() method calls.

2020-11-24  Allen D. Ball  <ball@hcf.dev>

	* src/main/java/ball/tools/javadoc/AbstractTaglet.java:
	Interim check-in: Calculate Javadoc hrefs for documented classes,
	constructors, fields, and methods.

2020-08-20  Allen D. Ball  <ball@hcf.dev>

	* Initial migration from ball-javadoc-taglets-jdk8.
