@@ -1,3 +1,7 @@
+2020-12-10  Allen D. Ball  <ball@hcf.dev>
+
+	* src/main/java/ball/tools/javadoc/Extern.java: Initial writing.
+
 2020-11-28  Allen D. Ball  <ball@hcf.dev>
 
 	* Configure META-INF/services/jdk.javadoc.doclet.Taglet.
@@ -5,8 +9,6 @@
 	* src/main/java/ball/tools/javadoc/AbstractTaglet.java;
 	Interim check-in: Use Extern to construct external javadoc links
 	(currently fails due to ClassLoader issues).
-
-	* src/main/java/ball/tools/javadoc/Extern.java: Initial writing.
 
 	* src/main/java/ball/tools/javadoc/StandardDoclet.java:
 	Interim check-in: Configure Extern by intercepting "-link" and
